fable/test/valid/mod_integers.f
      program prog
      write(6,*) mod(13, 5)
      end
