fable/test/syntax_error/bad_format_7.f
      program prog
      write(6, '(tl)')
      end
